initial implementation of the "Game of Life" demo

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build:css": "postcss src/assets/css/index.css -o dist/assets/css/main.css",
     "build:html": "node scripts/generate-html.mjs",
     "build:img": "cp -vr src/assets/img/ dist/assets/img",
-    "build:js": "esbuild src/assets/modules/**/*.ts --minify --tree-shaking=true --outdir=dist/assets/modules",
+    "build:js": "esbuild src/assets/**/*.ts --minify --tree-shaking=true --outdir=dist/assets",
+    "build:js:watch": "npm run build:js -- --watch",
     "clean": "rm -rf dist",
     "lint": "npm run lint:prettier &&  npm run lint:typescript && npm run lint:html",
     "lint:html": "html-validate dist",
