--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./src/assets/modules/**/*"]
+  "include": ["./src/assets/**/*"]
 }
