--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: lts/Iron
+          node-version: lts/Jod
           cache: npm
       - name: Setup Pages
         uses: actions/configure-pages@v5
